<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_footer_control_panel_button_title_set_background"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="0dp"
            android:text="@string/view_footer_control_panel_title_background"
            android:textAllCaps="false" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_footer_control_panel_button_title_unset_background"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="0dp"
            android:text="@string/view_footer_control_panel_title_nobackground"
            android:textAllCaps="false" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/view_footer_control_panel_checkbox_text_bold"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/view_footer_control_panel_text_bold"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/view_footer_control_panel_checkbox_text_italic"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/view_footer_control_panel_text_italic"
            android:textStyle="italic" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/view_footer_control_panel_checkbox_text_underline"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/view_footer_control_panel_text_underline"
            android:textStyle="normal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_footer_control_panel_button_text_size"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/view_footer_control_panel_text_size"
            android:textStyle="normal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_window_bottom_button_bar_text_color"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/view_footer_control_panel_text_color"
            android:textStyle="normal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_window_bottom_button_bar_image_merge"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/view_footer_control_panel_image_merge"
            android:textStyle="normal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_window_bottom_button_bar_image_split"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/view_footer_control_panel_image_split"
            android:textStyle="normal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_footer_control_panel_button_component_remove"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/view_footer_control_panel_component_remove" />
    </LinearLayout>
</ScrollView>